syntax = "proto3";

package user;

option go_package = "./user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message User {
  int64 id = 1;
  string email = 2;
  string phone = 3;
  string name = 4;
  string role = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string phone = 3;
  string name = 4;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message GetProfileRequest {
  int64 user_id = 1;
}

message GetProfileResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
}

message UpdateProfileRequest {
  int64 user_id = 1;
  string name = 2;
  string phone = 3;
}

message UpdateProfileResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 code = 1;
  string message = 2;
  int64 user_id = 3;
  string role = 4;
}
